--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/cli": "^4.0.7",
-    "tailwindcss": "^4.0.7"
+    "@tailwindcss/cli": "^4.0.7"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
